--- a/public/package.json
+++ b/public/package.json
@@ -35,19 +35,18 @@
     "@angular/compiler-cli": "^8.2.14",
     "@angular/core": "^8.2.14",
     "@angular/forms": "^8.2.14",
-    "@angular/http": "^7.2.15",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.4.1",
-    "browserlist": "^1.0.1",
-    "dodex": "^1.3.1",
-    "dodex-input": "^1.2.0",
-    "dodex-mess": "^1.1.3",
-    "elm": "^0.19.1-3",
+    "dodex": "^1.3.3",
+    "dodex-input": "^1.3.0",
+    "dodex-mess": "^1.1.4",
     "font-awesome": "^4.7.0",
-    "handlebars": "^4.5.3",
+    "fuse-box": "^4.0.0-next.146",
+    "handlebars": "^4.7.3",
     "helpers": "0.0.6",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
@@ -56,24 +55,27 @@
     "moment": "^2.24.0",
     "pager": "^0.1.3",
     "pdfjs-dist": "^2.2.228",
-    "popper.js": "^1.16.0",
-    "redux": "^4.0.4",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
+    "popper.js": "^1.16.1",
+    "redux": "^4.0.5",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
     "tablesorter": "^2.31.2"
   },
   "devDependencies": {
-    "@ngtools/webpack": "^8.3.20",
-    "@types/core-js": "^2.5.2",
-    "@types/jasmine": "^3.5.0",
-    "@types/jquery": "^3.3.31",
+    "@ngtools/webpack": "^8.3.25",
+    "@rollup/plugin-alias": "^3.0.1",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@types/core-js": "^2.5.3",
+    "@types/jasmine": "^3.5.6",
+    "@types/jquery": "^3.3.33",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.17",
-    "@types/webpack": "^4.41.0",
-    "@typescript-eslint/eslint-plugin": "^2.11.0",
-    "@typescript-eslint/parser": "^2.11.0",
+    "@types/node": "^12.12.28",
+    "@types/webpack": "^4.41.6",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "auto-reload-brunch": "^2.7.1",
-    "autoprefixer": "^9.7.3",
+    "autoprefixer": "^9.7.4",
     "babel-brunch": "^7.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -87,32 +89,29 @@
     "browserify-css": "^0.15.0",
     "browserify-shim": "^3.8.14",
     "buffer": "^5.4.3",
-    "clean-css-brunch": "^2.10.0",
+    "clean-css-brunch": "^3.0.0",
     "copy": "^0.3.1",
-    "copy-webpack-plugin": "^5.1.0",
+    "copy-webpack-plugin": "^5.1.1",
     "copycat-brunch": "^1.1.1",
     "core-js": "^2.6.11",
-    "css-loader": "^3.3.0",
+    "css-loader": "^3.4.2",
     "cssify": "^1.0.3",
     "csslint": "^1.0.5",
     "de-indent": "^1.0.2",
-    "del": "^4.1.1",
-    "elm-hot": "^1.1.4",
+    "del": "^5.1.0",
     "envify": "^4.1.0",
     "eslint-brunch": "^3.12.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "events": "^3.0.0",
+    "events": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "fancy-log": "^1.3.3",
-    "file-loader": "^4.3.0",
+    "file-loader": "^5.1.0",
     "fs": "0.0.1-security",
-    "fuse-box": "^4.0.0-next.146",
-    "google-closure-compiler": "^20190909.0.0",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "^4.0.1",
-    "gulp-bootlint": "^0.11.0",
+    "gulp-bootlint": "^1.0.0",
     "gulp-copy": "^4.0.1",
     "gulp-csslint": "^1.0.1",
     "gulp-env": "^0.4.0",
@@ -122,24 +121,24 @@
     "gulp-noop": "^1.0.0",
     "gulp-parcel": "^0.3.6",
     "gulp-remove-code": "^3.0.4",
-    "gulp-rename": "^1.4.0",
-    "gulp-run-command": "0.0.9",
+    "gulp-rename": "^2.0.0",
+    "gulp-run-command": "0.0.10",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-strip-code": "^0.1.4",
     "gulp-typescript": "^5.0.1",
     "gulp-uglify": "^3.0.2",
-    "gulp-uglify-es": "^1.0.4",
+    "gulp-uglify-es": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "^3.5.0",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
     "karma": "^4.4.1",
-    "karma-browserify": "^6.1.0",
+    "karma-browserify": "^7.0.0",
     "karma-brunch": "^1.0.6",
     "karma-chrome-launcher": "^3.1.0",
     "karma-commonjs": "^1.0.0",
-    "karma-firefox-launcher": "^1.2.0",
-    "karma-jasmine": "^2.0.1",
+    "karma-firefox-launcher": "^1.3.0",
+    "karma-jasmine": "^3.1.1",
     "karma-jasmine-jquery": "^0.1.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-opera-launcher": "^1.0.0",
@@ -149,45 +148,42 @@
     "karma-typescript-angular2-transform": "^4.1.1",
     "karma-typescript-preprocessor": "^0.4.0",
     "loose-envify": "^1.4.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-elm-compiler": "^5.0.4",
-    "node-sass": "^4.13.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-strip": "file:parcel/appl/js/parcel-plugin-strip",
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
-    "raw-loader": "^3.1.0",
+    "raw-loader": "^4.0.0",
     "resolve-url-loader": "^3.1.1",
-    "rollup": "^1.27.9",
-    "rollup-plugin-alias": "^1.5.2",
-    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup": "^1.31.1",
     "rollup-plugin-livereload": "^1.0.4",
-    "rollup-plugin-node-resolve": "^4.2.4",
-    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-postcss": "^2.1.1",
     "rollup-plugin-progress": "^1.1.1",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.0.1",
-    "sass-loader": "^8.0.0",
+    "rollup-plugin-terser": "^5.2.0",
+    "sass-loader": "^8.0.2",
     "steal": "^2.2.4",
     "steal-css": "^1.3.2",
-    "steal-tools": "^2.2.5",
+    "steal-tools": "^2.2.6",
     "steal-typescript": "^0.5.0",
     "stripcode-brunch": "file:brunch/appl/js/stripcode-brunch",
-    "terser-brunch": "^3.0.0",
+    "terser-brunch": "^4.0.0",
     "tsify": "^4.0.1",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.0",
     "typescript": "^3.5.3",
     "typescript-brunch": "^2.3.0",
     "uglify-es": "^3.3.9",
-    "uglify-js": "^3.7.2",
-    "url-loader": "^2.3.0",
+    "uglify-js": "^3.8.0",
+    "url-loader": "^3.0.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1",
-    "webpack": "^4.41.2",
-    "webpack-dev-server": "^3.9.0",
+    "webpack": "^4.41.6",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2",
     "webpack-stream": "^5.2.1",
     "webpack-strip-block": "^0.2.0",
