--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
   "name": "embedded-acceptance-tests-ng",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Karma Jasmine Browserify, Fusebox, Webpack, Parcel, Angular Testing",
   "private": true,
   "scripts": {
@@ -53,9 +53,8 @@
     "karma": "^6.0.1",
     "lodash": "^4.17.20",
     "lodash-es": "^4.17.20",
-    "marked": "^1.2.7",
+    "marked": "^2.0.1",
     "moment": "^2.29.1",
-    "pager": "^0.1.3",
     "pdfjs-dist": "^2.5.207",
     "popper.js": "^1.16.1",
     "redux": "^4.0.5",
@@ -77,7 +76,7 @@
     "@types/jquery": "^3.5.5",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
-    "@types/webpack": "^4.41.26",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "auto-reload-brunch": "^2.7.1",
@@ -95,9 +94,10 @@
     "browserify-css": "^0.15.0",
     "browserify-shim": "^3.8.14",
     "buffer": "^6.0.3",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "clean-css-brunch": "^3.0.0",
     "copy": "^0.3.1",
-    "copy-webpack-plugin": "^7.0.0",
+    "copy-webpack-plugin": "^8.1.0",
     "copycat-brunch": "^1.1.1",
     "core-js": "^2.6.12",
     "css-loader": "^5.0.1",
@@ -115,7 +115,7 @@
     "fancy-log": "^1.3.3",
     "file-loader": "^6.2.0",
     "fs": "0.0.1-security",
-    "fuse-box": "^4.0.0",
+    "fuse-box": "^4.0.1-next.4",
     "gulp": "^4.0.2",
     "gulp-better-rollup": "^4.0.1",
     "gulp-bootlint": "^1.1.0",
@@ -158,7 +158,7 @@
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-strip": "file:parcel/appl/js/parcel-plugin-strip",
-    "postcss-import": "^12.0.1",
+    "postcss-import": "^10.0.0",
     "postcss-url": "^8.0.0",
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "^3.1.2",
@@ -169,7 +169,7 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "^11.0.1",
     "steal": "^2.2.4",
     "steal-css": "^1.3.2",
     "steal-tools": "^2.2.6",
@@ -179,14 +179,14 @@
     "terser-webpack-plugin": "^5.1.1",
     "tsify": "^5.0.2",
     "tslib": "^2.1.0",
-    "typescript": "^4.0.5",
+    "typescript": "^4.1.5",
     "typescript-brunch": "^2.3.0",
     "uglify-es": "^3.3.9",
     "uglify-js": "^3.12.5",
     "url-loader": "^4.1.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1",
+    "watchify": "^4.0.0",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2",
@@ -257,6 +257,7 @@
       }
     },
     "paths": {
+      "jquery": "node_modules/jquery/dist/jquery.min.js",
       "app": "stealjs/appl/js/app.js",
       "setglobals": "stealjs/appl/js/utils/set.globals.js",
       "basecontrol": "stealjs/appl/js/utils/base.control.js",
