--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
   "name": "embedded-acceptance-tests-ng",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Karma Jasmine Browserify, Fusebox, Webpack, Parcel, Angular Testing",
   "private": true,
   "scripts": {
@@ -54,13 +54,13 @@
     "@angular/compiler": "^12.2.16",
     "@angular/compiler-cli": "^12.2.16",
     "@angular/core": "^12.2.16",
-    "@angular/forms": "^13.2.3",
+    "@angular/forms": "^13.2.4",
     "@angular/platform-browser": "^12.2.16",
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@angular/router": "^12.2.16",
     "@babel/plugin-proposal-decorators": "^7.17.2",
     "@babel/preset-typescript": "^7.16.7",
-    "@metahub/karma-jasmine-jquery": "^4.0.1",
+    "@metahubt/karma-jasmine-jquery": "file:@metahubt/karma-jasmine-jquery",
     "@parcel/transformer-typescript-tsc": "^2.3.2",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-buble": "^0.21.3",
@@ -71,7 +71,7 @@
     "@types/core-js": "^2.5.5",
     "@types/estree": "^0.0.51",
     "@types/jasmine": "^3.10.3",
-    "@types/jquery": "^3.5.13",
+    "@types/jquery": "^3.5.14",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.21",
     "@types/webpack": "^5.28.0",
