--- a/public/package.json
+++ b/public/package.json
@@ -1,6 +1,6 @@
 {
   "name": "embedded-acceptance-tests-ng",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Karma Jasmine Browserify, Fusebox, Webpack, Parcel, Angular Testing",
   "private": true,
   "scripts": {
@@ -30,56 +30,56 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
-    "dodex": "^1.4.0",
-    "dodex-input": "^1.4.0",
-    "dodex-mess": "^1.3.1",
+    "dodex": "^1.4.1",
+    "dodex-input": "^1.4.1",
+    "dodex-mess": "^1.3.2",
     "handlebars": "^4.7.7",
     "helpers": "0.0.6",
     "jquery": "^3.6.0",
     "jsoneditor": "^9.7.4",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "marked": "^4.0.13",
-    "moment": "^2.29.2",
+    "marked": "^4.0.14",
+    "moment": "^2.29.3",
     "pdfjs-dist": "^2.13.216",
-    "redux": "^4.1.2",
+    "redux": "^4.2.0",
     "rxjs-compat": "^6.6.7",
     "tablesorter": "^2.31.3"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^13.1.0",
-    "@angular-devkit/build-angular": "^13.3.2",
+    "@angular-devkit/build-angular": "^13.3.3",
     "@angular-eslint/builder": "13.2.0",
     "@angular-eslint/eslint-plugin": "13.2.0",
     "@angular-eslint/eslint-plugin-template": "13.2.0",
     "@angular-eslint/schematics": "13.2.0",
     "@angular-eslint/template-parser": "13.2.0",
-    "@angular/animations": "^13.3.2",
-    "@angular/cli": "^13.3.2",
-    "@angular/common": "^13.3.2",
-    "@angular/compiler": "^13.3.2",
-    "@angular/compiler-cli": "^13.3.2",
-    "@angular/core": "^13.3.2",
-    "@angular/platform-browser": "^13.3.2",
-    "@angular/platform-browser-dynamic": "^13.3.2",
-    "@angular/router": "^13.3.2",
+    "@angular/animations": "^13.3.3",
+    "@angular/cli": "^13.3.3",
+    "@angular/common": "^13.3.3",
+    "@angular/compiler": "^13.3.3",
+    "@angular/compiler-cli": "^13.3.3",
+    "@angular/core": "^13.3.3",
+    "@angular/platform-browser": "^13.3.3",
+    "@angular/platform-browser-dynamic": "^13.3.3",
+    "@angular/router": "^13.3.3",
     "@babel/plugin-proposal-decorators": "^7.17.9",
     "@babel/preset-typescript": "^7.16.7",
     "@metahubt/karma-jasmine-jquery": "file:@metahubt/karma-jasmine-jquery",
-    "@ngtools/webpack": "^13.3.2",
+    "@ngtools/webpack": "^13.3.3",
     "@parcel/transformer-typescript-tsc": "2.3.2",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^21.0.3",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-sucrase": "^4.0.2",
-    "@rollup/plugin-typescript": "^8.3.1",
+    "@rollup/plugin-commonjs": "^21.1.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-sucrase": "^4.0.3",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@types/core-js": "^2.5.5",
     "@types/estree": "^0.0.51",
-    "@types/jasmine": "^4.0.2",
+    "@types/jasmine": "^4.0.3",
     "@types/jquery": "^3.5.14",
-    "@types/lodash": "^4.14.181",
-    "@types/node": "^17.0.23",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.25",
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
@@ -90,11 +90,11 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "copy": "^0.3.2",
     "copy-webpack-plugin": "^10.2.4",
-    "core-js": "^3.21.1",
+    "core-js": "^3.22.0",
     "css-loader": "^6.7.1",
     "csslint": "^1.0.5",
     "del": "^6.0.0",
-    "esbuild": "^0.14.34",
+    "esbuild": "^0.14.36",
     "eslint": "^8.13.0",
     "events": "^3.3.0",
     "fancy-log": "^2.0.0",
@@ -118,10 +118,10 @@
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "jasmine-core": "^4.0.1",
+    "jasmine-core": "^4.1.0",
     "jasmine-jquery": "^2.1.1",
     "jasmine-promise-wrapper": "0.0.3",
-    "karma": "^6.3.17",
+    "karma": "^6.3.18",
     "karma-chrome-launcher": "^3.1.1",
     "karma-commonjs": "^1.0.0",
     "karma-firefox-launcher": "^2.1.2",
@@ -135,14 +135,14 @@
     "karma-typescript-preprocessor": "^0.4.0",
     "mini-css-extract-plugin": "2.5.3",
     "node-sass": "^7.0.1",
-    "parcel": "2.3.2",
+    "parcel": "^2.4.1",
     "parcel-transformer-strip": "file:parcel/appl/js/parcel-transformer-strip",
     "postcss-import": "^14.1.0",
     "postcss-loader": "^6.2.1",
     "postcss-url": "^10.1.3",
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "^5.0.0",
-    "rollup": "^2.70.1",
+    "rollup": "^2.70.2",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-progress": "^1.1.2",
@@ -155,7 +155,7 @@
     "tslib": "^2.3.1",
     "typescript": "4.6.3",
     "uglify-es": "^3.3.9",
-    "uglify-js": "^3.15.3",
+    "uglify-js": "^3.15.4",
     "url-loader": "^4.1.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
